# rust-demo-sclick-native-ui

./: Cargo.toml
src/: bindHotkey.rs  config.rs  main.rs  style.rs
src/icons/: icon.icns
wix/: main.wxs
